fixed overflow hidden bug

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -9,6 +9,7 @@ font-family: 'Yeseva One', cursive; */
 
 body {
     background: rgb(195, 195, 195);
+    overflow: hidden;
 }
 
 article h1 {
